# PoetryLangchain

./: aiagent.md  uv管理的项目.md
langchain/: pyproject.toml
langchain/app/: server.py
langchain/template/agent/: AgentTest.py
langchain/template/embeddings/: EmbeddingsTest.py  LangchainEmbeddings.py
langchain/template/langchat/: langchat.py
langchain/template/rag/: EmbeddingsTest.py  LangRAG.py
langchain/template/unit_example/agent/: AgentDb.py  AgentDemo.py
langchain/template/unit_example/data_structure/: ExtractPersonStructure.py  MedicalBilling.py
langchain/template/unit_example/embeddings/: FlagEmbeddingDemo.py
langchain/template/unit_example/langchain_db/: goodpydb.py  langchaindb.py  pydb.py
langchain/template/unit_example/langserve/: client.py  fast.py
langchain/template/unit_example/langserver/: client.py
langchain/template/unit_example/rag/: LangRAG.py
langchain/tool/db/: DbTool.py
langserver/: README.md  pyproject.toml
langserver/app/: server.py
langserver/template/: langchat.py
langserver/template/agent/: AgentTest.py
langserver/template/debug/: lang_smith.py
tool/advanced/: 01_闭包.py  02_装饰器.py  05_多线程编程.py
tool/db/: DbTool.py
