[tool.poetry]
name = "langserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = "^0.3.1"}
anyio = "^4.8.0"
langchain-cli = "^0.0.36"
langchain-deepseek = "^0.1.2"
langchain = "^0.3.20"
langchain-core = "^0.3.45"
openai = "1.66.2"
numpy = {version = "^2.2.4", source = "tuna"}
langchain-community = {version = "^0.3.20", source = "tuna"}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
